[tool.poetry]
name = "whatermarkremover"
version = "0.1.0"
description = ""
authors = ["Pedro Balbino <phsb5321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
opencv-python = "^4.8.1.78"
numpy = "^1.26.1"
tqdm = "^4.66.1"
asyncio = "^3.4.3"
scikit-image = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
